# mlflow-model-gcp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  job.yaml  pyproject.toml  requirements.txt  run_local_docker.sh  run_local_experiment.sh  test.ipynb
.github/workflows/: build_wheel.yaml  dev_pipeline.yaml  prod_pipeline.yaml  run-pipeline.yaml  run_pipeline_dev.yaml  run_pipeline_main.yaml  train.yaml  train_pipeline.yaml  validate-wheel.yaml  validate_wheel.yaml
.github/workflows/build-and-push-wheel/: action.yaml
.github/workflows/deploy-cloud-job/: action.yaml
.github/workflows/does-polymodel-version-exists/: action.yaml
.github/workflows/init-env-vars/: action.yaml
.github/workflows/resolve-polymodel-version/: action.yaml
.github/workflows/setup-env/: action.yaml
configs/: config.yaml
configs/model_hyperparams/: random_forest.yaml
configs/preprocessing_hyperparams/: feature_selector.yaml
configs/transformer_hyperparams/: kbest_text_vector.yaml
mlruns/0/: meta.yaml
mlruns/512155574181222088/: meta.yaml
mlruns/695786060707671976/: meta.yaml
mlruns/695786060707671976/3399af13d80746e789f37778f29f9f37/: meta.yaml
mlruns/695786060707671976/3399af13d80746e789f37778f29f9f37/params/: model.hyperparams_file  preprocessor.0.hyperparams.features  preprocessor.0.hyperparams_file  preprocessor.0.name  preprocessor.1.hyperparams_file  preprocessor.1.name
mlruns/695786060707671976/3399af13d80746e789f37778f29f9f37/tags/: mlflow.runName
polymodel/: pyproject.toml
polymodel/src/polymodel/: factory.py  pipeline.py  wrapper.py
polymodel/src/polymodel/components/: base_components.py  registry.py
polymodel/src/polymodel/components/models/: naive_bayes.py  random_forest.py  xgboost.py
polymodel/src/polymodel/components/transformers/: date_signal.py  text_cleaner.py  text_vectorizer.py
polymodel/src/polymodel/model/: factory.py  interface.py  mixed_naive_bayes.py  random_forest.py
polymodel/src/polymodel/model/derived/: random_forest.py
polymodel/src/polymodel/preprocessor/: factory.py
polymodel/src/polymodel/transformer/: factory.py  feature_selector.py  interface.py  kbest_text_vector.py  text_cleaner.py
polymodel/src/polymodel/transformer/derived/: kbest_text_vector.py
scripts/: build_model_reqs.sh  check_version_bump.py  pin_model_reqs.py  remove_notebook_outputs.py  run_local_experiment.sh  sync_uv_lock_file.py  test.ipynb  update_mlflow_version_badge.py  update_polymodel_version_badge.py  update_python_version_badge.py
src/: artifactory.py  context.py  debug.py  experiment.py  loader.py  main.py  mlflow.py  optimise.py  package.py  setup_logging.py  training.py
src/data/: loader.py
src/ml/: metrics.py  plots.py  training.py
src/ml/evaluation/: evaluator.py  plots.py
src/ml/evaluation/metrics/: base_metric.py  interface.py  recall_metric.py  roc_auc_metric.py
src/preprocessors/: factory.py
src/preprocessors/custom/: feature_selector.py  kbest_text_vector.py
src/utils/: container.py  context.py  git.py  mlflow.py  package.py  setup_logging.py
src/utils/ml/: metrics.py  plots.py  processing.py
tests/: test_optimisation.py
tests/data/: test_loader.py
tests/ml/: test_evaluator.py  test_metric_recall.py  test_metric_roc_auc.py  test_metrics.py
tests/polymodel/: test_components.py  test_pipeline.py
