[project]
name = "mlflow-model-gcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "build>=1.3.0",
    "duckdb>=1.4.2",
    "gitpython>=3.1.45",
    "google-cloud-storage>=3.6.0",
    "mlflow>=3.6.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pandas-gbq>=0.30.0",
    "pipreqs>=0.5.0",
    "polymodel",
    "pytest>=9.0.1",
    "pytest-html>=4.1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.uv.workspace]
members = [
    "polymodel",
]

[tool.uv.sources]
polymodel = { workspace = true }
