[project]
name = "mlflow-model-gcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.45",
    "google-cloud-storage>=3.6.0",
    "pandas-gbq>=0.30.0",
    "pipreqs>=0.5.0",
    "polymodel",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "duckdb>=1.4.2",
    "pytest>=9.0.1",
    "pre-commit>=4.5.1",
    "twine>=6.2.0",
    "keyring>=25.7.0",
    "keyrings-google-artifactregistry-auth>=1.1.2",
]

[tool.uv.workspace]
members = [
    "polymodel",
]

[tool.uv.sources]
polymodel = { workspace = true }
