[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymodel"
version = "1.1.0"
description = "Standalone ML model package to build a model pipeline dynamically from a config file."
requires-python = ">=3.11"
dependencies = [
    "mlflow>=3.6.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "joblib>=1.4.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["polymodel*"]
