[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymodel"
version = "1.1.4"
description = "Standalone ML model package to build a model pipeline dynamically from a config file."
requires-python = ">=3.11"
dependencies = [
    "mlflow==3.6.0",
    "numpy>=2.3.4,<3.0.0",
    "pandas>=2.3.3,<3.0.0",
    "scikit-learn==1.7.2,<2.0.0",
    "joblib>=1.3.2,<2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["polymodel*"]
